fix: prices changes

--- a/projects/ui-components/src/lib/solo-pricing/solo-pricing.component.html
+++ b/projects/ui-components/src/lib/solo-pricing/solo-pricing.component.html
@@ -6,11 +6,11 @@
     </div>
     <div class="pricing-plans">
         <span class="price-value">
-            <span class="value">19</span>
-            <span class="currency">,99€</span>
+            <span class="value">20</span>
+            <span class="currency">€</span>
             <span class="month"> /mois </span>
             <br>
-            <span class="tax"> hors taxe</span>
+            <span class="tax">hors taxe</span>
         </span>
         <span class="subtitle">Pour l'entrepreneur individuel</span>
     </div>
