--- a/projects/ui-components/src/lib/team-pricing/team-pricing.component.html
+++ b/projects/ui-components/src/lib/team-pricing/team-pricing.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="pricing-plans">
         <span class="price-value">
-            <span class="value">29</span>
-            <span class="currency">,99€</span>
+            <span class="value">30</span>
+            <span class="currency">€</span>
             <span class="month"> /mois </span>
             <br>
             <span class="tax">hors taxe / utilisateur</span>
